--- a/html/Index.html
+++ b/html/Index.html
@@ -43,11 +43,14 @@
             </div>
             <div class="cards-wrapper d-flex flex-wrap justify-content-between">
                 <div class="card" title="топ с вырезом халтер">
-                    <button type="button" title="Добавить в желаемое" class="favourite d-flex flex-row-reverse justify-content-end">
-                        <svg xmlns="http://www.w3.org/2000/svg" width="20" height="20" fill="currentColor" class="bi bi-heart" viewBox="0 0 16 16">
-                            <path d="m8 2.748-.717-.737C5.6.281 2.514.878 1.4 3.053c-.523 1.023-.641 2.5.314 4.385.92 1.815 2.834 3.989 6.286 6.357 3.452-2.368 5.365-4.542 6.286-6.357.955-1.886.838-3.362.314-4.385C13.486.878 10.4.28 8.717 2.01zM8 15C-7.333 4.868 3.279-3.04 7.824 1.143q.09.083.176.171a3 3 0 0 1 .176-.17C12.72-3.042 23.333 4.867 8 15"/>
-                        </svg>
-                    </button>
+                    <div class="favourite" title="Добавить в избранное">
+                        <input class="checkbox" type="checkbox" id="prod1">
+                        <label class="icon d-flex flex-row" for="prod1">
+                            <svg xmlns="http://www.w3.org/2000/svg" width="20" height="20" fill="currentColor" class="bi bi-heart-fill" viewBox="0 0 16 16">
+                                <path class="heart" fill-rule="evenodd" d="M8 1.314C12.438-3.248 23.534 4.735 8 15-7.534 4.736 3.562-3.248 8 1.314"/>
+                            </svg>
+                        </label>
+                    </div>
                     <a href="Product.html">
                         <div class="card-body d-flex flex-column">
                             <img src="/html/source/img/prod1.png" alt="">
@@ -69,11 +72,14 @@
                     </a>
                 </div>
                 <div class="card">
-                    <button type="button" title="Добавить в желаемое" class="favourite d-flex justify-content-end">
-                        <svg xmlns="http://www.w3.org/2000/svg" width="20" height="20" fill="currentColor" class="bi bi-heart" viewBox="0 0 16 16">
-                            <path d="m8 2.748-.717-.737C5.6.281 2.514.878 1.4 3.053c-.523 1.023-.641 2.5.314 4.385.92 1.815 2.834 3.989 6.286 6.357 3.452-2.368 5.365-4.542 6.286-6.357.955-1.886.838-3.362.314-4.385C13.486.878 10.4.28 8.717 2.01zM8 15C-7.333 4.868 3.279-3.04 7.824 1.143q.09.083.176.171a3 3 0 0 1 .176-.17C12.72-3.042 23.333 4.867 8 15"/>
-                        </svg>
-                    </button>
+                    <div class="favourite" title="Добавить в избранное">
+                        <input class="checkbox" type="checkbox" id="prod2">
+                        <label class="icon d-flex flex-row" for="prod2">
+                            <svg xmlns="http://www.w3.org/2000/svg" width="20" height="20" fill="currentColor" class="bi bi-heart-fill" viewBox="0 0 16 16">
+                                <path class="heart" fill-rule="evenodd" d="M8 1.314C12.438-3.248 23.534 4.735 8 15-7.534 4.736 3.562-3.248 8 1.314"/>
+                            </svg>
+                        </label>
+                    </div>
                     <a href="Product.html">
                         <div class="card-body d-flex flex-column">
                             <img src="/html/source/img/prod2.png" alt="">
@@ -95,11 +101,14 @@
                     </a>
                 </div>
                 <div class="card">
-                    <button type="button" title="Добавить в желаемое" class="favourite d-flex justify-content-end">
-                        <svg xmlns="http://www.w3.org/2000/svg" width="20" height="20" fill="currentColor" class="bi bi-heart" viewBox="0 0 16 16">
-                            <path d="m8 2.748-.717-.737C5.6.281 2.514.878 1.4 3.053c-.523 1.023-.641 2.5.314 4.385.92 1.815 2.834 3.989 6.286 6.357 3.452-2.368 5.365-4.542 6.286-6.357.955-1.886.838-3.362.314-4.385C13.486.878 10.4.28 8.717 2.01zM8 15C-7.333 4.868 3.279-3.04 7.824 1.143q.09.083.176.171a3 3 0 0 1 .176-.17C12.72-3.042 23.333 4.867 8 15"/>
-                        </svg>
-                    </button>
+                    <div class="favourite" title="Добавить в избранное">
+                        <input class="checkbox" type="checkbox" id="prod3">
+                        <label class="icon d-flex flex-row" for="prod3">
+                            <svg xmlns="http://www.w3.org/2000/svg" width="20" height="20" fill="currentColor" class="bi bi-heart-fill" viewBox="0 0 16 16">
+                                <path class="heart" fill-rule="evenodd" d="M8 1.314C12.438-3.248 23.534 4.735 8 15-7.534 4.736 3.562-3.248 8 1.314"/>
+                            </svg>
+                        </label>
+                    </div>
                     <a href="Product.html">
                         <div class="card-body d-flex flex-column">
                             <img src="/html/source/img/prod3.png" alt="">
@@ -121,11 +130,14 @@
                     </a>
                 </div>
                 <div class="card">
-                    <button type="button" title="Добавить в желаемое" class="favourite d-flex justify-content-end">
-                        <svg xmlns="http://www.w3.org/2000/svg" width="20" height="20" fill="currentColor" class="bi bi-heart" viewBox="0 0 16 16">
-                            <path d="m8 2.748-.717-.737C5.6.281 2.514.878 1.4 3.053c-.523 1.023-.641 2.5.314 4.385.92 1.815 2.834 3.989 6.286 6.357 3.452-2.368 5.365-4.542 6.286-6.357.955-1.886.838-3.362.314-4.385C13.486.878 10.4.28 8.717 2.01zM8 15C-7.333 4.868 3.279-3.04 7.824 1.143q.09.083.176.171a3 3 0 0 1 .176-.17C12.72-3.042 23.333 4.867 8 15"/>
-                        </svg>
-                    </button>
+                    <div class="favourite" title="Добавить в избранное">
+                        <input class="checkbox" type="checkbox" id="prod4">
+                        <label class="icon d-flex flex-row" for="prod4">
+                            <svg xmlns="http://www.w3.org/2000/svg" width="20" height="20" fill="currentColor" class="bi bi-heart-fill" viewBox="0 0 16 16">
+                                <path class="heart" fill-rule="evenodd" d="M8 1.314C12.438-3.248 23.534 4.735 8 15-7.534 4.736 3.562-3.248 8 1.314"/>
+                            </svg>
+                        </label>
+                    </div>
                     <a href="Product.html">
                         <div class="card-body d-flex flex-column">
                             <img src="/html/source/img/prod4.png" alt="">
@@ -183,11 +195,14 @@
             <h3>Прозрачные ткани</h3>
             <div class="cards-wrapper d-flex flex-wrap justify-content-between">
                 <div class="card">
-                    <button type="button" title="Добавить в желаемое" class="favourite d-flex flex-row-reverse justify-content-end">
-                        <svg xmlns="http://www.w3.org/2000/svg" width="20" height="20" fill="currentColor" class="bi bi-heart" viewBox="0 0 16 16">
-                            <path d="m8 2.748-.717-.737C5.6.281 2.514.878 1.4 3.053c-.523 1.023-.641 2.5.314 4.385.92 1.815 2.834 3.989 6.286 6.357 3.452-2.368 5.365-4.542 6.286-6.357.955-1.886.838-3.362.314-4.385C13.486.878 10.4.28 8.717 2.01zM8 15C-7.333 4.868 3.279-3.04 7.824 1.143q.09.083.176.171a3 3 0 0 1 .176-.17C12.72-3.042 23.333 4.867 8 15"/>
-                        </svg>
-                    </button>
+                    <div class="favourite" title="Добавить в избранное">
+                        <input class="checkbox" type="checkbox" id="prod5">
+                        <label class="icon d-flex flex-row" for="prod5">
+                            <svg xmlns="http://www.w3.org/2000/svg" width="20" height="20" fill="currentColor" class="bi bi-heart-fill" viewBox="0 0 16 16">
+                                <path class="heart" fill-rule="evenodd" d="M8 1.314C12.438-3.248 23.534 4.735 8 15-7.534 4.736 3.562-3.248 8 1.314"/>
+                            </svg>
+                        </label>
+                    </div>
                     <a href="Product.html">
                         <div class="card-body d-flex flex-column">
                             <img src="/html/source/img/prod5.png" alt="">
@@ -209,11 +224,14 @@
                     </a>
                 </div>
                 <div class="card">
-                    <button type="button" title="Добавить в желаемое" class="favourite d-flex justify-content-end">
-                        <svg xmlns="http://www.w3.org/2000/svg" width="20" height="20" fill="currentColor" class="bi bi-heart" viewBox="0 0 16 16">
-                            <path d="m8 2.748-.717-.737C5.6.281 2.514.878 1.4 3.053c-.523 1.023-.641 2.5.314 4.385.92 1.815 2.834 3.989 6.286 6.357 3.452-2.368 5.365-4.542 6.286-6.357.955-1.886.838-3.362.314-4.385C13.486.878 10.4.28 8.717 2.01zM8 15C-7.333 4.868 3.279-3.04 7.824 1.143q.09.083.176.171a3 3 0 0 1 .176-.17C12.72-3.042 23.333 4.867 8 15"/>
-                        </svg>
-                    </button>
+                    <div class="favourite" title="Добавить в избранное">
+                        <input class="checkbox" type="checkbox" id="prod6">
+                        <label class="icon d-flex flex-row" for="prod6">
+                            <svg xmlns="http://www.w3.org/2000/svg" width="20" height="20" fill="currentColor" class="bi bi-heart-fill" viewBox="0 0 16 16">
+                                <path class="heart" fill-rule="evenodd" d="M8 1.314C12.438-3.248 23.534 4.735 8 15-7.534 4.736 3.562-3.248 8 1.314"/>
+                            </svg>
+                        </label>
+                    </div>
                     <a href="Product.html">
                         <div class="card-body d-flex flex-column">
                             <img src="/html/source/img/prod6.png" alt="">
@@ -235,11 +253,14 @@
                     </a>
                 </div>
                 <div class="card">
-                    <button type="button" title="Добавить в желаемое" class="favourite d-flex justify-content-end">
-                        <svg xmlns="http://www.w3.org/2000/svg" width="20" height="20" fill="currentColor" class="bi bi-heart" viewBox="0 0 16 16">
-                            <path d="m8 2.748-.717-.737C5.6.281 2.514.878 1.4 3.053c-.523 1.023-.641 2.5.314 4.385.92 1.815 2.834 3.989 6.286 6.357 3.452-2.368 5.365-4.542 6.286-6.357.955-1.886.838-3.362.314-4.385C13.486.878 10.4.28 8.717 2.01zM8 15C-7.333 4.868 3.279-3.04 7.824 1.143q.09.083.176.171a3 3 0 0 1 .176-.17C12.72-3.042 23.333 4.867 8 15"/>
-                        </svg>
-                    </button>
+                    <div class="favourite" title="Добавить в избранное">
+                        <input class="checkbox" type="checkbox" id="prod7">
+                        <label class="icon d-flex flex-row" for="prod7">
+                            <svg xmlns="http://www.w3.org/2000/svg" width="20" height="20" fill="currentColor" class="bi bi-heart-fill" viewBox="0 0 16 16">
+                                <path class="heart" fill-rule="evenodd" d="M8 1.314C12.438-3.248 23.534 4.735 8 15-7.534 4.736 3.562-3.248 8 1.314"/>
+                            </svg>
+                        </label>
+                    </div>
                     <a href="Product.html">
                         <div class="card-body d-flex flex-column">
                             <img src="/html/source/img/prod7.png" alt="">
@@ -261,11 +282,14 @@
                     </a>
                 </div>
                 <div class="card">
-                    <button type="button" title="Добавить в желаемое" class="favourite d-flex justify-content-end">
-                        <svg xmlns="http://www.w3.org/2000/svg" width="20" height="20" fill="currentColor" class="bi bi-heart" viewBox="0 0 16 16">
-                            <path d="m8 2.748-.717-.737C5.6.281 2.514.878 1.4 3.053c-.523 1.023-.641 2.5.314 4.385.92 1.815 2.834 3.989 6.286 6.357 3.452-2.368 5.365-4.542 6.286-6.357.955-1.886.838-3.362.314-4.385C13.486.878 10.4.28 8.717 2.01zM8 15C-7.333 4.868 3.279-3.04 7.824 1.143q.09.083.176.171a3 3 0 0 1 .176-.17C12.72-3.042 23.333 4.867 8 15"/>
-                        </svg>
-                    </button>
+                    <div class="favourite" title="Добавить в избранное">
+                        <input class="checkbox" type="checkbox" id="prod8">
+                        <label class="icon d-flex flex-row" for="prod8">
+                            <svg xmlns="http://www.w3.org/2000/svg" width="20" height="20" fill="currentColor" class="bi bi-heart-fill" viewBox="0 0 16 16">
+                                <path class="heart" fill-rule="evenodd" d="M8 1.314C12.438-3.248 23.534 4.735 8 15-7.534 4.736 3.562-3.248 8 1.314"/>
+                            </svg>
+                        </label>
+                    </div>
                     <a href="Product.html">
                         <div class="card-body d-flex flex-column">
                             <img src="/html/source/img/prod8.png" alt="">
@@ -314,75 +338,8 @@
                 </a>
             </div>
         </div>
-        <div class="question-topics-wrapper d-flex flex-row justify-content-around">
-            <a href="">
-                <div class="order-topic topic d-flex flex-column">
-                    <div class="icon">
-                        <svg width="24px" height="24px" viewBox="0 0 24 24" fill="none" xmlns="http://www.w3.org/2000/svg">
-                            <path d="M9.53589 6.90909C9.53589 5.85473 10.4868 5 11.6599 5C12.8329 5 13.7839 5.85473 13.7839 6.90909C13.7839 7.40532 13.6046 7.85733 13.2925 8.19682C12.6948 8.84706 11.8015 9.50197 11.8015 10.3455V10.6299M11.8015 10.6299C12.533 10.6214 13.2674 10.8246 13.8845 11.2406L21.317 16.2509C22.6234 17.1315 21.9305 19 20.2975 19H3.70254C2.08721 19 1.38322 17.1648 2.65531 16.27L9.751 11.2787C10.3534 10.855 11.076 10.6383 11.8015 10.6299Z" stroke="currentColor" stroke-width="1.5" stroke-linecap="round"/>
-                        </svg>
-                    </div>
-                    <div class="text">
-                        <p class="topic-header">Как сделать заказ</p>
-                        <p class="topic-description">Подробная инструкция для новых клиентов</p>
-                    </div>
-                </div>
-            </a>
-            <a href="">
-                <div class="order-topic topic d-flex flex-column">
-                    <div class="icon">
-                        <svg xmlns="http://www.w3.org/2000/svg" width="24" height="24" fill="currentColor" class="bi bi-question-circle" viewBox="0 0 16 16">
-                            <path d="M8 15A7 7 0 1 1 8 1a7 7 0 0 1 0 14m0 1A8 8 0 1 0 8 0a8 8 0 0 0 0 16"/>
-                            <path d="M5.255 5.786a.237.237 0 0 0 .241.247h.825c.138 0 .248-.113.266-.25.09-.656.54-1.134 1.342-1.134.686 0 1.314.343 1.314 1.168 0 .635-.374.927-.965 1.371-.673.489-1.206 1.06-1.168 1.987l.003.217a.25.25 0 0 0 .25.246h.811a.25.25 0 0 0 .25-.25v-.105c0-.718.273-.927 1.01-1.486.609-.463 1.244-.977 1.244-2.056 0-1.511-1.276-2.241-2.673-2.241-1.267 0-2.655.59-2.75 2.286m1.557 5.763c0 .533.425.927 1.01.927.609 0 1.028-.394 1.028-.927 0-.552-.42-.94-1.029-.94-.584 0-1.009.388-1.009.94"/>
-                          </svg>
-                    </div>
-                    <div class="text">
-                        <p class="topic-header">Вопросы и ответы</p>
-                        <p class="topic-description">Все о доставке, возврате и пошлинах</p>
-                    </div>
-                </div>
-            </a>
-            <a href="">
-                <div class="order-topic topic d-flex flex-column">
-                    <div class="icon">
-                        <svg xmlns="http://www.w3.org/2000/svg" width="24" height="24   " fill="currentColor" class="bi bi-chat-left" viewBox="0 0 16 16">
-                            <path d="M14 1a1 1 0 0 1 1 1v8a1 1 0 0 1-1 1H4.414A2 2 0 0 0 3 11.586l-2 2V2a1 1 0 0 1 1-1zM2 0a2 2 0 0 0-2 2v12.793a.5.5 0 0 0 .854.353l2.853-2.853A1 1 0 0 1 4.414 12H14a2 2 0 0 0 2-2V2a2 2 0 0 0-2-2z"/>
-                          </svg>
-                    </div>
-                    <div class="text">
-                        <p class="topic-header">Нужна помощь?</p>
-                        <p class="topic-description">Обратитесь в нашу клиентскую службу</p>
-                    </div>
-                </div>
-            </a>
-        </div>
-        <div class="subscribe-wrapper d-flex flex-row justify-content-between">
-            <div class="header-wrapper d-flex flex-column">
-                <h2>НИЧЕГО НЕ ПРОПУСТИТЕ</h2>
-                <p>Подпишитесь на рассылку, чтобы быть в курсе скидок и главных новинок.</p>
-            </div>
-            <form method="post" class="subscribe-form d-flex flex-column">
-                <p class="header">Получать уведомления</p>
-                <div class="body">
-                    <div class="mail-sub d-flex flex-column">
-                        <div class="checkbox-wrapper d-flex">
-                            <input type="checkbox" name="" id="mail" title="Почта" checked>
-                            <p>Почта</p>
-                        </div>
-                        <input type="text" placeholder="Email" id="email" autocomplete="email">
-                    </div>
-                    <div class="sms-sub d-flex flex-column">
-                        <div class="checkbox-wrapper d-flex align-content-center">
-                            <input type="checkbox" name="" id="sms" title="СМС">
-                            <p>СМС</p>
-                        </div>
-                        <input type="tel" placeholder="8..." id="phone" autocomplete="tel">
-                    </div>
-                    <button type="submit">Подписаться</button>
-                    <p>Регестрируясь, вы соглашаетесь получать маркетинговые сообщения по электронной почте и/или по СМС и подтверждаете, что ознакомились с "<a href="">Политикой конфеденциальности</a>". Чтобы отказаться от рассылки, нажмите на кнопку "Отписаться" в конце письма или ответьте STOP на наше СМС-сообщение</p>
-                </div>
-            </form>
-        </div>
+        <div id="questions-section"></div>
+        <div id="subscribe-section"></div>
     </main>
     <div id="footer"></div>
     <!-- <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.bundle.min.js" integrity="sha384-MrcW6ZMFYlzcLA8Nl+NtUVF0sA7MsXsP1UyJoMp4YLEuNSfAP+JcXn/tWtIaxVXM" crossorigin="anonymous"></script> -->
