--- a/html/IndexForHim.html
+++ b/html/IndexForHim.html
@@ -346,34 +346,10 @@
                     </div>
                 </a>
             </div>
-            <div class="subscribe-wrapper d-flex flex-row justify-content-between">
-                <div class="header-wrapper d-flex flex-column">
-                    <h2>НИЧЕГО НЕ ПРОПУСТИТЕ</h2>
-                    <p>Подпишитесь на рассылку, чтобы быть в курсе скидок и главных новинок.</p>
-                </div>
-                <form method="post" class="subscribe-form d-flex flex-column">
-                    <p class="header">Получать уведомления</p>
-                    <div class="body">
-                        <div class="mail-sub d-flex flex-column">
-                            <div class="checkbox-wrapper d-flex">
-                                <input type="checkbox" name="" id="mail" title="Почта" checked>
-                                <p>Почта</p>
-                            </div>
-                            <input type="text" placeholder="Email" id="email" autocomplete="email">
-                        </div>
-                        <div class="sms-sub d-flex flex-column">
-                            <div class="checkbox-wrapper d-flex align-content-center">
-                                <input type="checkbox" name="" id="sms" title="СМС">
-                                <p>СМС</p>
-                            </div>
-                            <input type="tel" placeholder="8..." id="phone" autocomplete="tel" hidden>
-                        </div>
-                        <button type="submit">Подписаться</button>
-                        <p>Регестрируясь, вы соглашаетесь получать маркетинговые сообщения по электронной почте и/или по СМС и подтверждаете, что ознакомились с "<a href="">Политикой конфеденциальности</a>". Чтобы отказаться от рассылки, нажмите на кнопку "Отписаться" в конце письма или ответьте STOP на наше СМС-сообщение</p>
-                    </div>
-                </form>
-            </div>
+            
         </div>
+        <div id="questions-section"></div>
+        <div id="subscribe-section"></div>
     </div>
     <div id="footer"></div>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.bundle.min.js" integrity="sha384-MrcW6ZMFYlzcLA8Nl+NtUVF0sA7MsXsP1UyJoMp4YLEuNSfAP+JcXn/tWtIaxVXM" crossorigin="anonymous"></script>
