--- a/html/_header.html
+++ b/html/_header.html
@@ -133,37 +133,9 @@
                                 </div>
                             </div>
                         </div>
-                        <div class="popover invisible" tabindex="-1" id="profileModal" aria-labelledby="profileModalLabel" aria-hidden="true">
-                            <div class="modal-dialog">
-                                <div class="modal-content">
-                                    <svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="currentColor" class="bi bi-caret-up-fill" viewBox="0 0 16 16">
-                                        <path d="m7.247 4.86-4.796 5.481c-.566.647-.106 1.659.753 1.659h9.592a1 1 0 0 0 .753-1.659l-4.796-5.48a1 1 0 0 0-1.506 0z"/>
-                                      </svg>
-                                    <div class="">
-                                        <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
-                                        <h5 class="user-name modal-title text" id="profileModalLabel">Maria</h5>
-                                    </div>
-                                    <div>
-                                        <ul>
-                                            <li><a href="">Программа лояльности</a></li>
-                                            <li><a href="">Заказы и возвраты</a></li>
-                                            <li><a href="">Кредит</a></li>
-                                            <li><a href="">Личные данные и безопасность</a></li>
-                                            <li><a href="">Настройки и предпочтения</a></li>
-                                            <li><a href="">Реферальная программа</a></li>
-                                        </ul>
-                                    </div>
-                                    <div>
-                                        <a href="">
-                                            <button type="button">В личный кабинет</button>
-                                        </a>
-                                    </div>
-                                </div>
-                            </div>
-                        </div>
                     </div>
                     <div class="favourite-icon icon">
-                        <a href="">
+                        <a href="Favourites.html">
                             <svg xmlns="http://www.w3.org/2000/svg" width="20" height="20" fill="currentColor" class="bi bi-heart" viewBox="0 0 16 16">
                                 <path d="m8 2.748-.717-.737C5.6.281 2.514.878 1.4 3.053c-.523 1.023-.641 2.5.314 4.385.92 1.815 2.834 3.989 6.286 6.357 3.452-2.368 5.365-4.542 6.286-6.357.955-1.886.838-3.362.314-4.385C13.486.878 10.4.28 8.717 2.01zM8 15C-7.333 4.868 3.279-3.04 7.824 1.143q.09.083.176.171a3 3 0 0 1 .176-.17C12.72-3.042 23.333 4.867 8 15"/>
                             </svg>
